replace immutable collection creation with factory method #2135